docs/docker/php-fpm/kubectl/deployment.yaml
#https://kubernetes.github.io/ingress-nginx/user-guide/fcgi-services/

apiVersion: v1
kind: Pod
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  containers: 
    - name: example-app
      image: madhankumar866/php-fpm
      ports:
        - containerPort: 9000
          name: fastcgi


---
apiVersion: v1
kind: Service
metadata:
  name:  example-service
spec:
  selector:
    app: example-app
  ports:
  - port: 9000
    targetPort: 9000
    name: fastcgi


---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: nginx-config
# data:
#   # server-snippet: |-
#   server-snippet.conf: |-
#     if ($request_uri ~ ^/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)(\-+)(kqz)$) {
#         rewrite ^/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)(\-+)(kqz)$ /TNNY5yrOcgn0W.php?$2/$3/$4/$5/$1 break;
#       }

# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
  annotations:

    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "ingress-cm"
    # nginx.ingress.kubernetes.io/server-snippet-from-file: /home/mk/mkdocs/docs/docker/php-fpm/kubectl/nginx-configmap.yaml
    # nginx.ingress.kubernetes.io/server-snippets-configmap: "nginx-config"


    # nginx.ingress.kubernetes.io/server-snippet: |-
    #   if ($request_uri ~ ^/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)(\-+)(kqz)$) {
    #       rewrite ^/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)/([a-zA-Z]+)/([a-zA-Z0-9]+)(\-+)(kqz)$ /TNNY5yrOcgn0W.php?$2/$3/$4/$5/$1 break;
    #   }

    nginx.ingress.kubernetes.io/location-snippet: |
      location ~ "/([a-zA-Z0-9-]{14}~[a-zA-Z0-9-]{11})/([a-z-]{7},[a-z-]{7},[a-z-]{7}-[0-9-]{7})/((.*)\.+([a-zA-Z]{3,4}))/([a-zA-z0-9-]{3})/([0-9-]{3}-[a-z-]{3}-[a-zA-Z0-9-]{5})$" {
        proxy_pass http://d2bktynw3n4si0.cloudfront.net/ei5Q3PdA/47n4l0Ca/ENYHtb4t3xjL/Cz5mgD/$3;
      }
      # location ~ "/([a-z-]{7})/((.*)\.+([a-zA-Z]{3,4}))(-[a-z-]{3}-)([a-zA-Z0-9-]{3})/([a-zA-Z0-9-]{5}-[0-9-]{2})/([a-z-]{8}:[A-Z-]{8})/([a-z-]{9}![0-9-]{7})/([a-zA-Z0-9-]{11}-[a-z-]{3})$" {
      #   proxy_pass http://d2bktynw3n4si0.cloudfront.net/ei5Q3PdA/47n4l0Ca/ENYHtb4t3xjL/Cz5mgD/$3;
      # }

    nginx.ingress.kubernetes.io/use-regex: "true"      


    # nginx.ingress.kubernetes.io/location-snippet: |
    #   expires off;
    #   fastcgi_split_path_info ^(.+\.php)(/.+)$;
    #   root /var/www/html;
    #   fastcgi_pass 127.0.0.1:9000;
    #   fastcgi_index index.php;
    #   fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
    #   include fastcgi_params;
    #   #fastcgi_param REMOTE_ADDR $http_x_real_ip;
    #   fastcgi_pass_header "X-Accel-Redirect";
    #   fastcgi_pass_header "X-Accel-Buffering";
    #   fastcgi_pass_header "X-Accel-Charset";
    #   fastcgi_pass_header "X-Accel-Expires";
    #   fastcgi_pass_header "X-Accel-Limit-Rate";
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              name: fastcgi
      - path: /TNNY5yrOcgn0W.php/?(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              name: fastcgi
